rmove youtube + add serie recommendations